# shakey

./: .gitignore  Cargo.toml  LICENSE  MASTERY.md  README.md
benchmarks/: coding.json  knowledge.json  math.json  reasoning.json  safety.json  three_d.json
configs/: agent.yaml  creator.yaml  model_stages.yaml  teachers.yaml
crates/shakey-agent/: Cargo.toml
crates/shakey-agent/src/: context_manager.rs  lib.rs  mcp_server.rs  ooda.rs
crates/shakey-agent/src/evolution/: benchmark.rs  curriculum.rs  mod.rs
crates/shakey-agent/src/generation/: mod.rs  specular.rs
crates/shakey-agent/src/memory/: consolidation.rs  embeddings.rs  episodic.rs  indexer.rs  knowledge_base.rs  knowledge_graph.rs  mod.rs
crates/shakey-agent/src/tools/: browser.rs  codebase_master.rs  context_manager.rs  exploit_architect.rs  fs_tools.rs  html_parse.rs  kali_pro_toolkit.rs  mod.rs  native_sandbox.rs  network_master.rs  registry.rs  sandbox.rs  shell_exec.rs  tool_synthesis.rs  web_fetch.rs  web_search.rs
crates/shakey-bench/: Cargo.toml
crates/shakey-bench/benches/: generation_speed.rs
crates/shakey-bench/src/: lib.rs
crates/shakey-cli/: Cargo.toml
crates/shakey-cli/src/: main.rs
crates/shakey-core/: Cargo.toml
crates/shakey-core/examples/: api_test.rs
crates/shakey-core/src/: env.rs  inference.rs  lib.rs  metrics.rs  tokenizer.rs
crates/shakey-core/src/memory/: mod.rs  paged_cache.rs
crates/shakey-core/src/model/: attention.rs  config.rs  epigenetics.rs  holographic.rs  layers.rs  lora.rs  mod.rs  moe.rs  pathway.rs  quant.rs  transformer.rs
crates/shakey-core/src/training/: capabilities.rs  checkpoint.rs  dataloader.rs  distillation.rs  mod.rs  muon.rs  optimizer.rs  replay_buffer.rs  scheduler.rs  trainer.rs
crates/shakey-distill/: Cargo.toml
crates/shakey-distill/src/: adversary.rs  alchemist.rs  batch.rs  data_gen.rs  filter.rs  lib.rs  nim_client.rs  reward.rs  teacher.rs  utils.rs
scripts/: benchmark.sh  build_all_targets.sh  kaggle_master_script.md  verify.sh
