[package]
name = "shakey-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
shakey-core = { path = "../shakey-core" }
shakey-agent = { path = "../shakey-agent" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "generation_speed"
harness = false
