[package]
name = "shakey-distill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NVIDIA NIM teacher distillation pipeline with rate limiting"

[dependencies]
shakey-core = { workspace = true }
candle-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
scraper = "0.19"
futures = { workspace = true }
regex = "1.12.3"
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
